--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -50,16 +50,16 @@
   <meta property="og:url" content=%REACT_APP_URL%>
   <meta property="og:title" content="Western Chip: we will make your car perfect!">
   <meta property="og:description"
-    content="Chip Tuning, Car system diagnostic, DPF/EGR off, steering system repair">
-  <meta property="og:image" content="%PUBLIC_URL%/Assets/images/header_bckgr_bw.jpg">
+    content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
+  <meta property="og:image" content="%REACT_APP_URL%/Assets/images/header_bckgr_bw.jpg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content=%REACT_APP_URL%>
   <meta name="twitter:title" content="Western Chip: we will make your car perfect!">
   <meta name="twitter:description"
-    content="Chip Tuning, Car system diagnostic, DPF/EGR off, Steering system repair">
-  <meta property="twitter:image"  content="%PUBLIC_URL%/Assets/images/header_bckgr_bw.jpg">
+    content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
+  <meta property="twitter:image"  content="%REACT_APP_URL%/Assets/images/header_bckgr_bw.jpg">
 </head>
 
 <body>
