--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -59,7 +59,7 @@
   <meta name="twitter:title" content="Western Chip: we will make your car perfect!">
   <meta name="twitter:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="twitter:image"  content="%REACT_APP_URL%/Assets/images/header_bckgr_bw.jpg">
+  <meta property="twitter:image"  content="https://western-service.herokuapp.com/Assets/images/header_bckgr_bw.jpg">
 </head>
 
 <body>
