another url change

--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -59,9 +59,9 @@
   <meta name="twitter:title" content="Western Chip: we will make your car perfect!">
   <meta name="twitter:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="twitter:image"  content="https://western-service.herokuapp.com/Assets/images/header_bckgr_bw.jpg">
+  <meta property="twitter:image"  content="./Assets/images/header_bckgr_bw.jpg">
 </head>
-
+./Assets/images/header_bckgr_bw.jpg
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
