another url change

--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -51,7 +51,7 @@
   <meta property="og:title" content="Western Chip: we will make your car perfect!">
   <meta property="og:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="og:image" content="%REACT_APP_URL%/Assets/images/header_bckgr_bw.jpg">
+  <meta property="og:image" content="./Assets/images/header_bckgr_bw.jpg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
