another url change

--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -51,17 +51,16 @@
   <meta property="og:title" content="Western Chip: we will make your car perfect!">
   <meta property="og:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="og:image" content="./Assets/images/header_bckgr_bw.jpg">
+  <meta property="og:image" content="%PUBLIC_URL%/Assets/images/header_bckgr_bw.jpg">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content=%REACT_APP_URL%>
   <meta name="twitter:title" content="Western Chip: we will make your car perfect!">
   <meta name="twitter:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="twitter:image"  content="./Assets/images/header_bckgr_bw.jpg">
+  <meta property="twitter:image"  content="%PUBLIC_URL%/Assets/images/header_bckgr_bw.jpg">
 </head>
-./Assets/images/header_bckgr_bw.jpg
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
