another url change

--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -47,7 +47,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content=%REACT_APP_URL%>
+  <meta property="og:url" content=%PUBLIC_URL%>
   <meta property="og:title" content="Western Chip: we will make your car perfect!">
   <meta property="og:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
@@ -55,11 +55,11 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content=%REACT_APP_URL%>
+  <meta name="twitter:url" content=%PUBLIC_URL%>
   <meta name="twitter:title" content="Western Chip: we will make your car perfect!">
   <meta name="twitter:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="twitter:image"  content="%PUBLIC_URL%/Assets/images/header_bckgr_bw.jpg">
+  <meta property="twitter:image"  content="%PUBLIC_URL%/social/header_bckgr_bw.jpg">
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
