another url change

--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -54,7 +54,7 @@
   <meta property="og:image" content="%PUBLIC_URL%/social/header_bckgr_bw.jpg">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content=%PUBLIC_URL%>
   <meta name="twitter:title" content="Western Chip: we will make your car perfect!">
   <meta name="twitter:description"
