--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -52,6 +52,8 @@
   <meta property="og:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
   <meta property="og:image" content="%PUBLIC_URL%/social/header_bckgr_bw.jpg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="576">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
