change social image

--- a/sto_landing/public/index.html
+++ b/sto_landing/public/index.html
@@ -51,7 +51,7 @@
   <meta property="og:title" content="Western Chip: we will make your car perfect!">
   <meta property="og:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="og:image" content="%PUBLIC_URL%/social/header_bckgr_bw.jpg">
+  <meta property="og:image" content="%PUBLIC_URL%/social/social_image.png">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="576">
 
@@ -61,7 +61,7 @@
   <meta name="twitter:title" content="Western Chip: we will make your car perfect!">
   <meta name="twitter:description"
     content="Chip Tuning, Діагностика електронних систем авто, DPF/EGR off, Ремонт систем рульового управління, Корегування одометрів">
-  <meta property="twitter:image"  content="%PUBLIC_URL%/social/header_bckgr_bw.jpg">
+  <meta property="twitter:image"  content="%PUBLIC_URL%/social/social_image.png">
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
